- a bug in P4A_Collection::nextItem was fixed
- PEAR::Console_Getopt was updated to 1.2.1
- PEAR::Validate was updated to 0.7.0
- PEAR::MDB2 was updated to 2.3.0
- PEAR::MDB2_Driver_mysql was updated to 1.3.0
- PEAR::MDB2_Driver_mysqli was updated to 1.3.0
- PEAR::MDB2_Driver_oci8 was updated to 1.3.0
- PEAR::MDB2_Driver_pgsql was updated to 1.3.0
- PEAR::MDB2_Driver_sqlite was updated to 1.3.0


1.99.13
- Internet Explorer 7 is now correctly detected and p4a does not include png and pure css menu hack
- a bug on P4A_DB_Source with multivalue fields was fixed

1.99.12
- a bug on P4A_DB_Source with multivalue fields was fixed

1.99.11
- P4A_Frame::clean() was added to reset anchored objects map
- PEAR::HTML_Template_Flexy was updated to 1.2.5
- PHP closing tag was removed from all files
- P4A_Widget::onKeyUp() was added
- P4A_Widget::onKeyDown() was added
- P4A_Data_Field::getSQLNewValue() was added for safe query
- P4A_Data_Field::getSQLValue() was added for safe query
- P4A_Field::getSQLNewValue() was added for safe query
- P4A_Field::getSQLValue() was added for safe query
- Keyboard keycode now is passed as param to P4A_Widget::onKeyUp(),onKeyDown(),onKeyPress() handlers
- getKeyPressed() was added to p4a.js
- onsubmit="return false" was added to p4a_mask form
- a bugfix on P4A_DB_Source::getNumRows() with group by was done
- some error checks were added to P4A_DB_Source::getNumRows()
- a bug on P4A_DB_Source::getFilters() was fixed
- P4A_DB_Source::rowByPk() was added to move a db source using the pk values
- error check was added to P4A_DB_Source::getPkRow()
- a bug in P4A_Number::unformat() with negative numbers was fixed (thanks to therealpecus)
- some code has been beautified

1.99.10
- TinyFCK was updated to 0.16 (TinyMCE 2.0.8)
- some TinyMCE options were changes to get better XHTML strict validation (align was removed)
- Bulgarian translation was added (thanks to Angel Grancharov)