@@ -17,6 +17,9 @@
 - PEAR::MDB2_Driver_oci8 was updated to 1.3.0
 - PEAR::MDB2_Driver_pgsql was updated to 1.3.0
 - PEAR::MDB2_Driver_sqlite was updated to 1.3.0
+- if showPrevMask is called within a popup, the popup is closed
+- P4A_Collection now checks if an object still exists when doing nextItem(), if it was destroyed, then the collection is updated removing the reference
+- "prototype" javascript library was updated to 1.5.0_rc2 to avoid multicheckbox ajax submit bug
 
 
 1.99.13
